--- a/Code4/views/layout.hbs
+++ b/Code4/views/layout.hbs
@@ -31,10 +31,20 @@
               <a class="nav-link" href="/contact">Contact</a>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          <ul class="nav navbar-nav navbar-right">
+            {{#if user}}
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">{{user.name}}</a>
+            </li>
+            {{else}}
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/register">Register</a>
+            </li>
+            {{/if}}
+          </ul>
         </div>
       </div>
     </nav>
