Feature: Logout Functionality
users can now log out of their accounts

--- a/Code4/views/layout.hbs
+++ b/Code4/views/layout.hbs
@@ -33,8 +33,14 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {{#if user}}
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">{{user.name}}</a>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">
+                {{user.name}}<span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="/logout">Logout</a></li>
+              </ul>
+              
             </li>
             {{else}}
             <li class="nav-item">
