Chore: House Keeping
styled the account drop down as well as replicated code for sign in at sign up with Google

--- a/Code4/views/layout.hbs
+++ b/Code4/views/layout.hbs
@@ -33,12 +33,12 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {{#if user}}
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">
                 {{user.name}}<span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li><a href="/logout">Logout</a></li>
+                <li><a class="nav-link" style="color: black;" href="/logout">Logout</a></li>
               </ul>
               
             </li>
