--- a/Code4/views/register.hbs
+++ b/Code4/views/register.hbs
@@ -17,6 +17,6 @@
     <button type="submit" class="btn btn-primary btn-lg btn-block">Sign Up</button>
     <br>
     <h4 class="text-center">Or</h4>
-    <a href="/auth/google" class="btn btn-lg btn-success btn-block">Sign Up with Google</a>
+    <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google"></span> Sign Up with Google</a>
     
 </form>
