--- a/Code4/views/task.hbs
+++ b/Code4/views/task.hbs
@@ -32,6 +32,7 @@
         </div>
     </div>
 </div>
+<input type="hidden" value="{{roomId}}" id="roomId">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.4/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.4/mode/javascript/javascript.min.js"></script>
@@ -53,6 +54,9 @@
         username = "User" + userId
         $("#chatbox-username").text(username)
     }
+
+    var roomId = $('#roomId').val()
+    socket.emit('joinRoom', {room: roomId})
 
     var userMessage = function(name, text){
         return(
