--- a/Code4/views/task.hbs
+++ b/Code4/views/task.hbs
@@ -36,9 +36,15 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.4/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.4/mode/javascript/javascript.min.js"></script>
+
+<script src="/plugins/ot/ot.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 
 <script>
+    var EditorClient = ot.EditorClient
+    var SocketIOAdapter = ot.SocketIOAdapter
+    var CodeMirrorAdapter = ot.CodeMirrorAdapter
+
     var socket = io.connect('http://localhost:3000')
     var editor = CodeMirror.fromTextArea(
         document.getElementById("code-screen"),
@@ -48,6 +54,19 @@
         }
     );
 
+    var cmClient
+
+    function init(str, revision, clients, serverAdapter){
+        editor.setValue(str)
+        cmClient = window.cmClient = new EditorClient(
+            revision, clients, serverAdapter, new CodeMirrorAdapter(editor)
+        )
+    }
+
+    socket.on('doc', function(obj){
+        init(obj.str, obj.revision, obj.clients, new SocketIOAdapter(socket))
+    })
+
     var username = $("#chatbox-username").val()
     if(username === ""){
         var userId = Math.floor(Math.random() * 9999).toString()
@@ -56,7 +75,7 @@
     }
 
     var roomId = $('#roomId').val()
-    socket.emit('joinRoom', {room: roomId})
+    socket.emit('joinRoom', {room: roomId, username:username})
 
     var userMessage = function(name, text){
         return(
